public class AnimationConstants
{
    public const string PlayerMoving = "isMoving";
    public const string Player1Hp = "1HP";
    public const string PlayerSkillActivation = "Special";
    public const string PlayerSkillDeactivation = "SpecialDisable";
    
    public const string TookDamage = "TookDamage";
}